Try |View::HandleAccessibleAction| before falling back to fixed actions.

Currently automation API always do the fixed action for each
accessible action. For example, clicking on the center of the target
view is always triggered when AX_ACTION_DO_DEFAULT is passed to
automation API.

This CL makes automation API try to use |View::HandleAccessibleAction|
first. This change enables us to implement custom action on accessible
actions.

BUG=705350

Review-Url: https://codereview.chromium.org/2767143007
Cr-Commit-Position: refs/heads/master@{#460255}

Former-commit-id: e80b960e27af6495ff3dd79cbfcede18d48da85a